--- a/test.html
+++ b/test.html
@@ -1,4 +1,10 @@
 <input
   type="password"
-  style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%)"
+  style="
+    width: 440px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  "
 />
